# Gen

./: FLIST  Makefile.in  Makefile.nt  README  configure  configure.in  make.bat  night-build.sh  notes.txt
CORBA/: Makefile.in  Makefile.nt  configure  configure.in
CORBA/Facade/: Makefile.in  Makefile.nt  configure.in  env_inc.nt.mak  make.bat
CORBA/Facade/config/: entry.mak.in
CORBA/Facade/docs/: ProgrammingGuide_rus.tex
CORBA/Facade/include/: Makefile.nt
CORBA/Facade/src/: CORBAFacade.cpp  Makefile.in  Makefile.nt  PersistentServantBase.cpp
CORBA/Facade/tests/: Makefile.nt
CORBA/ServiceOptions/: Makefile.in  Makefile.nt  configure  configure.in
CORBA/ServiceOptions/config/: common_settings.nt.mak  entry.mak.in
CORBA/ServiceOptions/demo/: HelloWorldClient.cpp  HelloWorldServer.cpp  HelloWorlder.idl  Makefile.in  Makefile.nt  ServiceOptionsDemoConfig.h.in  ServiceOptionsDemoConfig.nt.h  ServiceOptionsDemoPostConfig.h  configure  configure.in  importCORBA.h
CORBA/ServiceOptions/docs/: Makefile.in  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex
CORBA/ServiceOptions/include/: Makefile.in  Makefile.nt
CORBA/ServiceOptions/src/: Makefile.in  Makefile.nt  ServiceOptions.cpp
CORBA/ServiceOptions/tests/: Makefile.nt
CORBA/Tools/: Makefile.in  configure  configure.in
CORBA/Tools/idl-depend/: Makefile.in
CORBA/config/Win32/: ORB_description.nt.mak  environment.nt.mak
Crypt/: Makefile.nt  configure  configure.in  notes.txt
Crypt/config/: entry.mak.in  env_inc.nt.mak
Crypt/docs/: Makefile.in  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex
Crypt/include/: Makefile.nt
Crypt/include/GradSoft/: CryptHelper  CryptHelper.h  Makefile.in  Makefile.nt
Crypt/src/: CryptHelper.cpp  Makefile.in  Makefile.nt
DirectoryContainer/: Makefile.in  Makefile.nt  configure  configure.in  notes.txt
DirectoryContainer/config/: common_settings.nt.mak  entry.mak.in
DirectoryContainer/demo/: DirectoryContainerDemo.cpp  Makefile.in  Makefile.nt
DirectoryContainer/docs/: Makefile.in  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex  koi8u.def
DirectoryContainer/docs/html/: FILES
DirectoryContainer/include/: Makefile.nt
DirectoryContainer/include/GradSoft/: DirectoryContainer.h  DirectoryContainerConfig.h.in  DirectoryContainerConfigNT.h  DirectoryContainerPostConfig.h  Makefile.in  Makefile.nt
DirectoryContainer/src/: DirectoryContainer.cpp  Makefile.in  Makefile.nt
DirectoryContainer/tests/EncoddingBug/: Main.cpp  environment.nt  m.bat  makefile.nt  readme
DynamicModules/: Makefile.in  Makefile.nt  configure  configure.in  make.bat
DynamicModules/config/: common_settings.nt.mak  entry.mak.in  env_inc.nt.mak
DynamicModules/demo/: Makefile.in  Makefile.nt
DynamicModules/demo/Hello/: Hello1.cpp  Hello2.cpp  HelloInterface.h  Main.cpp  Makefile.in  Makefile.nt
DynamicModules/docs/: Makefile.in  Makefile.nt  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex
DynamicModules/docs/html/: FILES
DynamicModules/include/: Makefile.in  Makefile.nt
DynamicModules/include/GradSoft/: DynamicModules.h  Makefile.in  Makefile.nt
DynamicModules/src/: DynamicModules.cpp  Makefile.in  Makefile.nt
Logger/: Makefile.in  Makefile.nt  configure  configure.in  notes.txt
Logger/config/: common_settings.nt.mak  entry.mak.in
Logger/demo/: Makefile.in  Makefile.nt  demo.cpp
Logger/docs/: Makefile.in  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex
Logger/include/: Makefile.nt
Logger/include/GradSoft/: Logger.h  LoggerConfig.h.in  LoggerConfigNT.h  LoggerPostConfig.h  Makefile.in  Makefile.nt
Logger/src/: Logger.cpp  Makefile.in  Makefile.nt
Logger/tests/MultilogFeature/: environment.nt  main.cpp  main1.cpp  makefile.nt  readme
ProgOptions/: Makefile.in  Makefile.nt  configure  configure.in  notes.txt
ProgOptions/config/: common_settings.nt.mak  entry.mak.in
ProgOptions/demo/: Makefile.in  Makefile.nt  ProgOptionsDemo.cpp  ProgOptionsDemo1.cpp  config.ini  demo.cpp
ProgOptions/docs/: Makefile.in  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex
ProgOptions/docs/html/: Makefile.in
ProgOptions/include/: Makefile.nt
ProgOptions/include/GradSoft/: Makefile.in  Makefile.nt  ProgOptions.h  ProgOptionsConfig.h.in  ProgOptionsConfigNT.h  ProgOptionsPostConfig.h  StringPtrWithLen.h
ProgOptions/src/: Makefile.in  Makefile.nt  ProgOptions.cpp  StringPtrWithLen.cpp
Signaling/: Makefile.in  configure  configure.in  makefile.nt
Signaling/config/: entry.mak.in  env_inc.nt.mak
Signaling/demo/: Makefile.in  demo.cpp  demo_handler.h  makefile.nt
Signaling/docs/: Makefile.in  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex
Signaling/docs/internal/: Defects_17_09_2001.tex
Signaling/include/: Makefile.nt
Signaling/include/GradSoft/: Makefile.in  Makefile.nt  Signaling.h
Signaling/src/: Makefile.in  Signaling.cpp
Tests/: Makefile.in  configure.in
Tests/Threading/: Makefile.in
Tests/Threading/ThreadEvent/: Makefile.in  TestForWait.cpp
Tests/Threading/ThreadServices/: Makefile.in
Tests/config/: entry.mak.in
Threading/: Makefile.in  configure  configure.in  make.bat  makefile.nt
Threading/config/: common_settings.nt.mak  entry.mak.in
Threading/demo/: Makefile.in  configure  configure.in  makefile.nt
Threading/demo/Container/: Container1.cpp  Container2.cpp  Container3.cpp  Makefile.in  README  makefile.nt
Threading/demo/DeleteThis/: DeleteThis.cpp  Makefile.in  Makefile.nt  README
Threading/docs/: Bib.bib  Makefile.in  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex
Threading/include/: Makefile.in  Makefile.nt
Threading/src/: Makefile.in  Makefile.nt  Mutex.cpp  RWLock.cpp  Runnable.cpp  Thread.cpp  ThreadContext.cpp  ThreadContextSingleton.h  ThreadEvent.cpp  ThreadService.cpp  ThreadingExceptions.cpp  ThreadingUtils.cpp
ptrs/: Makefile.in  Makefile.nt  configure  configure.in  make.bat
ptrs/config/: common_settings.nt.mak
ptrs/demo/: Makefile.in  Makefile.nt  configure  configure.in
ptrs/docs/: Bib.bib  Makefile.in  ProgrammingGuide_eng.tex  ProgrammingGuide_rus.tex
ptrs/include/: Makefile.nt
(+247 files in other folders)
