dnl autoconf script for GradSoft/Crypt
dnl part of Grad C++ Toolbox.
dnl (C) Ruslan Shevchenko <Ruslan@Shevchenko.Kiev.UA>, 1998
dnl (C) GradSoft, 2000
dnl $Id: configure.in,v 1.2 2001-04-13 11:29:46 yad Exp $
dnl
dnl Process this file with autoconf to produce a configure script.

AC_SUBST(PACKAGE, Crypt)
AC_SUBST(VERSION, 1.0)

AC_INIT(include/GradSoft/CryptHelper)
AC_CONFIG_AUX_DIR(../config)
AC_CANONICAL_SYSTEM

dnl Checks for programs.
AC_PATH_PROG(MAKE,make)
AC_SET_MAKE
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_PROG_INSTALL


RSSH_PROG_CXXAR
RSSH_PROG_CXXLD

dnl Checks for library functions.
AC_CHECK_FUNCS(strncmp)
RSSH_CHECK_CTIME_R
AC_CHECK_FUNCS(syslog)
AC_CHECK_FUNCS(ctime)

dnl check for compiler switches.

RSSH_ENABLE_PTHREADS
RSSH_PIC_FLAG

AC_CXX_NAMESPACES
AC_CXX_BOOL
AC_CXX_PARTIAL_SPECIALIZATION

RSSH_CHECK_STL
RSSH_CHECK_IOSTREAMS


dnl
project_root=`pwd`
AC_SUBST(project_root)

AC_OUTPUT(Makefile \
          include/Makefile \
          include/GradSoft/Makefile \
          src/Makefile \
          docs/Makefile \
          config/entry.mak \
          )
