dnl Gen/DirectoryContainer/configure.in
dnl auto{conf/make} script for DirectoryContainer.
dnl part of GradSoft C++ ToolBox
dnl (C) Ruslan Shevchenko <Ruslan@Shevchenko.Kiev.UA>, 1998
dnl (C) GradSoft, 2001
dnl http://www.gradsoft.com.ua
dnl $Id: configure.in,v 1.5 2003-03-29 16:00:45 rin Exp $
dnl
dnl Process this file with autoconf to produce a configure script.

AC_SUBST(PACKAGE, DirectoryContainer)
AC_SUBST(VERSION, 1.1.0)

AC_INIT(include/GradSoft/DirectoryContainer.h)
AC_CONFIG_AUX_DIR(../config)
AC_CANONICAL_SYSTEM

dnl Checks for programs.
AC_PATH_PROG(MAKE,make)
AC_SET_MAKE
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_PROG_INSTALL


RSSH_PROG_CXXAR
RSSH_PROG_CXXLD

dnl check for compiler switches.

RSSH_ENABLE_PTHREADS
RSSH_PIC_FLAG
RSSH_CHECK_STL
RIN_CHECK_DISTANCE_2_ARGS
AC_CXX_NAMESPACES
AC_CXX_BOOL
AC_CXX_MUTABLE
AC_CXX_STRING

dnl Checks for library functions.
AC_CHECK_FUNCS(readdir_r)

dnl
project_root=`pwd`
AC_SUBST(project_root)


dnl root, where web documentation will be installed.

AC_ARG_WITH(docs-web-root,docs-web-root (internal usage): where web documentation will be installed (default:<prefix>/doc/GradSoft))
if test "x$with_docs_web_root" = "x" -o "x$with_docs_web_root" = "xno"
then
 docs_web_root="\$(prefix)/share/doc/GradSoft"
else
 docs_web_root=$with_docs_web_root
fi
AC_SUBST(docs_web_root)


AC_CONFIG_HEADER(include/GradSoft/DirectoryContainerConfig.h)

AC_OUTPUT(Makefile \
          include/Makefile \
          include/GradSoft/Makefile \
          src/Makefile \
          docs/Makefile \
          demo/Makefile \
          config/entry.mak \
          )
