dnl Gen/Signaling/configure.in
dnl part of GradSoft C++ ToolBox
dnl (C) Ruslan Shevchenko <Ruslan@Shevchenko.Kiev.UA>, 1998
dnl (C) GradSoft, 2001
dnl http://www.gradsoft.com.ua
dnl $Id: configure.in,v 1.2 2001-09-26 13:36:57 jos Exp $
dnl
dnl Process this file with autoconf to produce a configure script.

AC_SUBST(PACKAGE, Signaling )
AC_SUBST(VERSION, 1.0)

AC_INIT(include/GradSoft/Signaling.h)
AC_CONFIG_AUX_DIR(../config)
AC_CANONICAL_SYSTEM

dnl Checks for programs.
AC_PATH_PROG(MAKE,make)
AC_SET_MAKE
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_PROG_INSTALL

RSSH_PROG_CXXAR
RSSH_PROG_CXXLD
AC_CXX_NAMESPACES
AC_CXX_BOOL
AC_CXX_MUTABLE
AC_CXX_STRING

AC_CHECK_FUNCS(sigaction)
AC_CHECK_FUNCS(signal)

AC_CHECK_HEADERS(unistd.h)
RSSH_CHECK_IOSTREAMS

dnl
PROJECT_ROOT=`pwd`
AC_SUBST(PROJECT_ROOT)

AC_OUTPUT(Makefile \
          src/Makefile \
          include/Makefile \
          include/GradSoft/Makefile \
          docs/Makefile \
          demo/Makefile  \
          config/entry.mak \
          )
