dnl Gen/Threading
dnl part of GradSoft C++ ToolBox
dnl (C) Ruslan Shevchenko <Ruslan@Shevchenko.Kiev.UA>, 1998
dnl (C) GradSoft, 2000, 2001
dnl $Id: configure.in,v 1.2 2001-06-05 10:09:34 rssh Exp $
dnl
dnl Process this file with autoconf to produce a configure script.

AC_SUBST(PACKAGE, ToolBoxTestSuite)

AC_INIT(Threading/ThreadEvent/TestForWait.cpp)
AC_CONFIG_AUX_DIR(../config)
AC_CANONICAL_SYSTEM

dnl Checks for programs.
AC_PATH_PROG(MAKE,make)
AC_SET_MAKE
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_PROG_INSTALL
RSSH_PROG_LORDER


RSSH_PROG_CXXAR
RSSH_PROG_CXXLD

dnl Checks for library functions.
dnl AC_CHECK_FUNCS(random)
RSSH_ENABLE_PTHREADS

dnl check for C++ compiler switches.
RSSH_PIC_FLAG
AC_CXX_NAMESPACES
AC_CXX_BOOL
AC_CXX_MUTABLE
AC_CXX_TYPENAME

dnl Checks for C++ library functions.
RSSH_CHECK_STL
RSSH_CHECK_IOSTREAMS

dnl
project_root=`pwd`
AC_SUBST(project_root)

AC_OUTPUT(Makefile \
	 config/entry.mak \
         Threading/Makefile \
         Threading/ThreadEvent/Makefile \
         Threading/ThreadServices/Makefile \
          )
