dnl Gen/Threading
dnl part of GradSoft C++ ToolBox
dnl (C) Ruslan Shevchenko <Ruslan@Shevchenko.Kiev.UA>, 1998
dnl (C) GradSoft, 2000, 2001
dnl $Id: configure.in,v 1.14 2002-04-18 09:23:21 rssh Exp $
dnl
dnl Process this file with autoconf to produce a configure script.

AC_SUBST(PACKAGE, Threading)
AC_SUBST(VERSION, 1.0)

AC_INIT(include/GradSoft/Threading.h)
AC_CONFIG_AUX_DIR(../config)
AC_CANONICAL_SYSTEM

dnl Checks for programs.
AC_PATH_PROG(MAKE,make)
AC_SET_MAKE
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_PROG_INSTALL
RSSH_PROG_LORDER(../config)


RSSH_PROG_CXXAR
RSSH_PROG_CXXLD

dnl Checks for library functions.
dnl AC_CHECK_FUNCS(random)
RSSH_ENABLE_PTHREADS
AC_CHECK_FUNCS(pthread_rwlock_init)
AC_CHECK_FUNCS(rwlock_init)
AC_CHECK_HEADER(unistd.h,AC_DEFINE(HAVE_UNISTD_H,1))
AC_CHECK_HEADER(errno.h,AC_DEFINE(HAVE_ERRNO_H,1))
AC_CHECK_HEADER(sched.h,AC_DEFINE(HAVE_SCHED_H,1))

dnl check for C++ compiler switches.
RSSH_PIC_FLAG
AC_CXX_NAMESPACES
AC_CXX_BOOL
AC_CXX_MUTABLE
AC_CXX_TYPENAME

dnl Checks for C++ library functions.
RSSH_CHECK_STL
RSSH_CHECK_IOSTREAMS


dnl root, where web documentation will be installed.

AC_ARG_WITH(docs-web-root,docs-web-root (internal usage): where web documentation will be installed (default:<prefix>/doc/GradSoft))
if test "x$with_docs_web_root" = "x" -o "x$with_docs_web_root" = "xno"
then
 docs_web_root="\$(prefix)/share/doc/GradSoft"
else
 docs_web_root=$with_docs_web_root
fi
AC_SUBST(docs_web_root)


dnl
project_root=`pwd`
AC_SUBST(project_root)

AC_CONFIG_HEADER(include/GradSoft/ThreadingConfig.h)

AC_CONFIG_SUBDIRS(demo)

AC_OUTPUT(Makefile \
          include/Makefile \
          include/GradSoft/Makefile \
          include/GradSoft/ThreadServices/Makefile \
          src/Makefile \
          docs/Makefile \
          config/entry.mak \
          )
