# conmfigure script for GradSoft C++ Toolbox.
# (C) GradSoft, 2000
# $Id: configure.in,v 1.3 2002-01-09 10:16:12 yad Exp $
#
AC_INIT(idl-depend/sh/idl_depend)
AC_CONFIG_AUX_DIR(../../config)

AC_PROG_INSTALL

AC_SET_MAKE

AC_OUTPUT(Makefile \
          idl-depend/Makefile
          idl-depend/sh/Makefile
         )
