dnl Process this file with autoconf to produce a configure script.
AC_INIT

AC_SUBST(PACKAGE, PtrDemos)
AC_SUBST(VERSION, 1.0)

AC_CONFIG_AUX_DIR(../../config)

project_root=`pwd`
AC_SUBST(project_root,$project_root)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AC_SET_MAKE

RSSH_ENABLE_PTHREADS

AC_CXX_NAMESPACES
AC_CXX_BOOL
AC_CXX_MUTABLE



dnl Output

AC_SUBST(LIBDIRS,$LIBDIRS)

AC_OUTPUT( \
          Makefile \
          owned_ptr/Makefile \
          auto_array_ptr/Makefile \
          safe_ptr/Makefile \
          )

