dnl Gen/Net/SMTPMailer/configure.in
dnl auto{conf/make} script for SMTPMailer.
dnl part of GradSoft C++ ToolBox
dnl (C) Ruslan Shevchenko <Ruslan@Shevchenko.Kiev.UA>, 1998
dnl (C) GradSoft, 2001
dnl http://www.gradsoft.com.ua
dnl $Id: configure.in,v 1.2 2001-04-28 09:43:52 jos Exp $
dnl
dnl Process this file with autoconf to produce a configure script.

AC_SUBST(PACKAGE, SMTPMailer)
AC_SUBST(VERSION, 1.0)

AC_INIT(include/GradSoft/SMTPMailer.h)
AC_CONFIG_AUX_DIR(../../config)
AC_CANONICAL_SYSTEM

dnl Checks for programs.
AC_PATH_PROG(MAKE,make)
AC_SET_MAKE
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_PROG_INSTALL


RSSH_PROG_CXXAR
RSSH_PROG_CXXLD

dnl check for compiler switches.

RSSH_ENABLE_PTHREADS
RSSH_PIC_FLAG
RSSH_CHECK_STL

AC_CXX_NAMESPACES
AC_CXX_BOOL
AC_CXX_MUTABLE

dnl
project_root=`pwd`
AC_SUBST(project_root)

AC_OUTPUT(Makefile \
          include/Makefile \
          include/GradSoft/Makefile \
          src/Makefile \
          docs/Makefile \
          demo/Makefile \
          config/entry.mak \
          )
